--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="intro-text">
       <p>Je m’appelle <strong>Aliou Mangane</strong></p>
-      <p>Je suis actuellement étudiant en étudiant en deuxième année d’Informatique de Gestion.<br</p>
+      <p>Je suis actuellement étudiant en deuxième année d’Informatique de Gestion.<br</p>
       <p>Passionné par le développement web et les
         technologies numériques, je possède une bonne compétence des langages du frontend tels que HTML, CSS et
         JavaScript, ainsi qu’une expérience avec le framework
