--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         consolider mes acquis, découvrir les environnements
         professionnels de développement et contribuer
         activement à des projets concrets et innovants.</p>
-        <a href="doc_cv/CV Aliou Mangane[].pdf" target="_blank" class="btn">Télécharger mon CV</a>
+        <a href="doc_cv/Aliou MANGANE CV Pro.pdf" target="_blank" class="btn">Télécharger mon CV</a>
     </div>
   </section>
 
